--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "nldesa - Nonlinear Differential Equation Stability Analysis"
+name = "nldesa"
 version = "0.0.1"
 authors = [
   { name="João Pedro Ferreira Biu", email="joaopedrofbiu@tecnico.ulisboa.pt" },
@@ -18,5 +18,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Homepage" = "https://github.com/joaopedrobiu6/nldesa/"
+"Bug Tracker" = "https://github.com/joaopedrobiu6/nldesa/issues/"
